--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "serve": "^11.2.0",
     "typeface-roboto": "^0.0.75",
     "typescript": "^3.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
